Added 001. Two Sum

--- a/001.Two Sum.md
+++ b/001.Two Sum.md
@@ -1,13 +1,10 @@
-// leetcode.cpp : 定义控制台应用程序的入口点。
-//
+001. Two Sum
 
-#include "stdafx.h"
-#include <stdlib.h>
-
-//1. Two Sum
+```c
 /**
 * Note: The returned array must be malloced, assume caller calls free().
 */
+
 int* twoSum(int* nums, int numsSize, int target)
 {
 	int* indices = (int*)malloc(2 * sizeof(int));
@@ -34,16 +31,4 @@ int* twoSum(int* nums, int numsSize, int target)
 	}
 	return indices;
 }
-
-
-int main()
-{
-	int nums[3] = { 3,2,4 };
-	int* indices = twoSum(nums, 3, 6);
-	for (int i = 0; i < 2; i++)
-	{
-		printf("%d\t", indices[i]);
-	}
-	return 0;
-}
-
+```
