Add 2. Add Two Numbers

--- a/002.Add Two Numbers.md
+++ b/002.Add Two Numbers.md
@@ -1,18 +1,8 @@
-// leetcode.cpp
-
-#include "stdafx.h"
-#include <stdlib.h>
-
-//Definition for singly-linked list.
-struct ListNode
+002. Add Two Numbers
+```c
+struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2) 
 {
-	int val;
-	struct ListNode *next;
-};
-
-struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2)
-{
-	if (l1 == NULL)
+    if (l1 == NULL)
 		return l2;
 	if (l2 == NULL)
 		return l1;
@@ -21,9 +11,9 @@ struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2)
 	struct ListNode *ans = NULL;
 
 	struct ListNode *pNext = NULL;
-	int up = 0;		//´¦Àí½øÎ»
+	int up = 0;		//å¤„ç†è¿›ä½
 
-	//½¨Á¢Ê×½Úµã
+	//å»ºç«‹é¦–èŠ‚ç‚¹
 	struct ListNode *pNode = (struct ListNode*)malloc(sizeof(struct ListNode));
 	ans = pNode;
 	pNode->val = (p->val + q->val) % 10;
@@ -43,7 +33,7 @@ struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2)
 		q = q->next;
 	}
 
-	//Èôl1£¬l2»¹ÓÐÊ£Óà½Úµã
+	//è‹¥l1ï¼Œl2è¿˜æœ‰å‰©ä½™èŠ‚ç‚¹
 	while (p != NULL)
 	{
 		pNext = (struct ListNode*)malloc(sizeof(struct ListNode));
@@ -65,7 +55,7 @@ struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2)
 		q = q->next;
 	}
 
-	if (up)		//Èç¹ûÓÐ½øÎ»£¬Ìí¼Ó½Úµã
+	if (up)		//å¦‚æžœæœ‰è¿›ä½ï¼Œæ·»åŠ èŠ‚ç‚¹
 	{
 		pNext = (struct ListNode*)malloc(sizeof(struct ListNode));
 		pNext->val = up;
@@ -73,49 +63,8 @@ struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2)
 		pNode = pNext;
 	}
 
-	pNode->next = NULL;		//Î²½ÚµãÖ¸ÕëÖÃ¿Õ
+	pNode->next = NULL;		//å°¾èŠ‚ç‚¹æŒ‡é’ˆç½®ç©º
 
 	return ans;
 }
-
-int main()
-{
-	struct ListNode *l1 = (struct ListNode *)calloc(3, sizeof(struct ListNode));
-	struct ListNode *p1 = l1;
-	p1->val = 8;
-	p1->next = p1 + 1;
-	p1++;
-
-	p1->val = 9;
-	p1->next = p1 + 1;
-	p1++;
-
-	p1->val = 9;
-	p1->next = NULL;
-
-	struct ListNode *l2 = (struct ListNode *)calloc(3, sizeof(struct ListNode));
-	struct ListNode *p2 = l2;
-	p2->val = 2;
-	p2->next = NULL;
-
-	/*p2->next = p2 + 1;
-	p2++;
-
-	p2->val = 6;
-	p2->next = p2 + 1;
-	p2++;
-
-	p2->val = 4;
-	p2->next = NULL;*/
-
-	struct ListNode *p = addTwoNumbers(l1, l2);
-
-	while (p != NULL) {
-		printf("%d ", p->val);
-		p = p->next;
-	}
-	printf("\n");
-
-	return 0;
-}
-
+```
