Add Hash solution for 3. Longest Substring Without Repeating Characters

--- a/3. Longest Substring Without Repeating Characters.md
+++ b/3. Longest Substring Without Repeating Characters.md
@@ -1,6 +1,6 @@
 3. Longest Substring Without Repeating Characters
 
-1.超级傻逼的穷举法，时间复杂度为n^4，不出意外果然超时。
+1.超级傻逼的穷举法，时间复杂度为n^4，不出意外果然**超时**了。
 ```c
 int lengthOfLongestSubstring(char* s)
 {
@@ -38,3 +38,31 @@ int lengthOfLongestSubstring(char* s)
 	return maxLengh;
 }
 ```
+
+2.Hash表求解
+```c
+int lengthOfLongestSubstring(char* s)
+{
+	int i, j;
+	int maxLengh = 0;
+	int hash[256];
+	int n = strlen(s);
+	for (i = 0; i<n; ++i)
+	{
+		memset(hash, 0, sizeof(hash));
+		hash[s[i]] = 1;
+		for (j = i + 1; j<n; ++j)
+		{
+			if (hash[s[j]] == 0)
+				hash[s[j]] = 1;
+			else
+				break;
+		}
+		if (j - i > maxLengh)
+		{
+			maxLengh = j - i;
+		}
+	}
+	return maxLengh;
+}
+	```
