--- a/4. Median of Two Sorted Arrays.md
+++ b/4. Median of Two Sorted Arrays.md
@@ -1,7 +1,6 @@
-// leetcode.cpp
+4. Median of Two Sorted Arrays
 
-#include "stdafx.h"
-
+```c
 double min(double a, double b)
 {
 	return a > b ? b : a;
@@ -34,12 +33,4 @@ double findMedianSortedArrays(int* nums1, int nums1Size, int* nums2, int nums2Si
 	else
 		return (findKth(nums1, nums1Size, nums2, nums2Size, total / 2) + findKth(nums1, nums1Size, nums2, nums2Size, total / 2 + 1)) / 2;
 }
-
-int main(void)
-{
-	int nums1[2] = { 1, 3 };
-	int nums2[1] = { 2 };
-
-	printf("%lf", findMedianSortedArrays(nums1, 2, nums2, 1));
-}
-
+```
