--- a/1.Two Sum.md
+++ b/1.Two Sum.md
@@ -1,5 +1,31 @@
 001. Two Sum
 
+Java
+```java
+public class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        int[] results = new int[2];
+        boolean canBreak = false;
+        for (int i = 0; i < nums.length; i++) {
+            if (canBreak)
+                break;
+            for (int j = 0; j < nums.length; j++) {
+                if (i == j) {
+                    continue;
+                }
+                if (nums[i] + nums[j] == target) {
+                    results[0] = i;
+                    results[1] = j;
+                    canBreak = true;
+                    break;
+                }
+            }
+        }
+        return results;
+    }
+}
+```
+
 ```c
 /**
 * Note: The returned array must be malloced, assume caller calls free().
