--- a/1.Two Sum.md
+++ b/1.Two Sum.md
@@ -1,60 +1,16 @@
 001. Two Sum
 
-Java
 ```java
 public class Solution {
     public int[] twoSum(int[] nums, int target) {
-        int[] results = new int[2];
-        boolean canBreak = false;
         for (int i = 0; i < nums.length; i++) {
-            if (canBreak)
-                break;
-            for (int j = 0; j < nums.length; j++) {
-                if (i == j) {
-                    continue;
-                }
+            for (int j = i + 1; j < nums.length; j++) {
                 if (nums[i] + nums[j] == target) {
-                    results[0] = i;
-                    results[1] = j;
-                    canBreak = true;
-                    break;
+                    return new int[]{i, j};
                 }
             }
         }
-        return results;
+        throw new IllegalArgumentException("No two sum solution");
     }
-}
-```
-
-```c
-/**
-* Note: The returned array must be malloced, assume caller calls free().
-*/
-
-int* twoSum(int* nums, int numsSize, int target)
-{
-	int* indices = (int*)malloc(2 * sizeof(int));
-
-	for (int i = 0; i < numsSize; i++)
-	{
-		for (int j = 0; j < numsSize&&j != i; j++)
-		{
-			if (nums[i] + nums[j] == target)
-			{
-				if (i < j)
-				{
-					indices[0] = i;
-					indices[1] = j;
-				}
-				else
-				{
-					indices[0] = j;
-					indices[1] = i;
-				}
-				return indices;
-			}
-		}
-	}
-	return indices;
 }
 ```
