update Add Two Numbers

--- a/2.Add Two Numbers.md
+++ b/2.Add Two Numbers.md
@@ -1,70 +1,66 @@
 002. Add Two Numbers
-```c
-struct ListNode* addTwoNumbers(struct ListNode* l1, struct ListNode* l2) 
-{
-    if (l1 == NULL)
-		return l2;
-	if (l2 == NULL)
-		return l1;
 
-	struct ListNode *p = l1, *q = l2;
-	struct ListNode *ans = NULL;
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        ListNode result = new ListNode(0);
+        ListNode head = result;
+        boolean plusOne = false;
+        while (true) {
+            if (l1 != null && l2 != null) {
+                result.next = new ListNode(l1.val + l2.val + (plusOne ? 1 : 0));
+                result = result.next;
+                l1 = l1.next;
+                l2 = l2.next;
+                plusOne = (result.val >= 10);
+                if(plusOne){
+                    result.val -= 10;
+                }
+                continue;
+            }
 
-	struct ListNode *pNext = NULL;
-	int up = 0;		//处理进位
+            if(l1 != null && l2 == null){
+                result.next = new ListNode(l1.val + (plusOne ? 1 : 0));
+                result = result.next;
+                l1 = l1.next;
+                plusOne = (result.val >= 10);
+                if(plusOne){
+                    result.val -= 10;
+                }
+                continue;
+            }
 
-	//建立首节点
-	struct ListNode *pNode = (struct ListNode*)malloc(sizeof(struct ListNode));
-	ans = pNode;
-	pNode->val = (p->val + q->val) % 10;
-	up = (p->val + q->val) / 10;
-	p = p->next;
-	q = q->next;
+            if(l1 == null && l2 != null){
+                result.next = new ListNode(l2.val + (plusOne ? 1 : 0));
+                result = result.next;
+                l2 = l2.next;
+                plusOne = (result.val >= 10);
+                if(plusOne){
+                    result.val -= 10;
+                }
+                continue;
+            }
 
-	while (p != NULL && q != NULL)
-	{
-		pNext = (struct ListNode*)malloc(sizeof(struct ListNode));
-		pNext->val = (p->val + q->val + up) % 10;
-		up = (p->val + q->val + up) / 10;
-
-		pNode->next = pNext;
-		pNode = pNext;
-		p = p->next;
-		q = q->next;
-	}
-
-	//若l1，l2还有剩余节点
-	while (p != NULL)
-	{
-		pNext = (struct ListNode*)malloc(sizeof(struct ListNode));
-		pNext->val = (p->val + up) % 10;
-		up = (p->val + up) / 10;
-
-		pNode->next = pNext;
-		pNode = pNext;
-		p = p->next;
-	}
-	while (q != NULL)
-	{
-		pNext = (struct ListNode*)malloc(sizeof(struct ListNode));
-		pNext->val = (q->val + up) % 10;
-		up = (q->val + up) / 10;
-
-		pNode->next = pNext;
-		pNode = pNext;
-		q = q->next;
-	}
-
-	if (up)		//如果有进位，添加节点
-	{
-		pNext = (struct ListNode*)malloc(sizeof(struct ListNode));
-		pNext->val = up;
-		pNode->next = pNext;
-		pNode = pNext;
-	}
-
-	pNode->next = NULL;		//尾节点指针置空
-
-	return ans;
+            if(l1 == null && l2 == null){
+                if(plusOne){
+                    result.next = new ListNode(1);
+                    result.next.next = null;
+                }
+                else{
+                    result.next = null;
+                }
+                break;
+            }
+        }
+        return head.next;
+    }
 }
 ```
