--- a/3.Longest Substring Without Repeating Characters.md
+++ b/3.Longest Substring Without Repeating Characters.md
@@ -1,105 +1,18 @@
 3. Longest Substring Without Repeating Characters
 
-1.超级傻逼的穷举法，时间复杂度为n^4，不出意外果然**超时**了。
-```c
-int lengthOfLongestSubstring(char* s)
-{
-	if (strlen(s) == 0)
-		return 0;
-
-	int maxLengh = 1;
-	int totalLength = strlen(s);
-	for (int i = 0; i < totalLength; ++i)
-	{
-		for (int j = i + 1; j < totalLength; ++j)
-		{
-			int flag = 0;
-			for (int m = i; m <= j; ++m)
-			{
-				for (int n = m + 1; n <= j; ++n)
-				{
-					if (s[n] == s[m])
-					{
-						flag = 1;
-						break;
-					}
-				}
-				if (flag == 1)
-				{
-					break;
-				}
-			}
-			if (flag == 0 && j - i + 1 > maxLengh)
-			{
-				maxLengh = j - i + 1;
-			}
-		}
-	}
-	return maxLengh;
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        int start = 0;
+        int length = 0;
+        Map<Character, Integer> map = new HashMap<>();
+        for (int i = 0; i < s.length(); i++) {
+            if (map.containsKey(s.charAt(i)))
+                start = start > map.get(s.charAt(i)) + 1 ? start : map.get(s.charAt(i)) + 1;
+            length = length > i - start + 1 ? length : i - start + 1;
+            map.put(s.charAt(i), i);
+        }
+        return length;
+    }
 }
-```
-
-2.Hash表求解
-```c
-int lengthOfLongestSubstring(char* s)
-{
-	int i, j;
-	int maxLengh = 0;
-	int hash[256];
-	int n = strlen(s);
-	for (i = 0; i<n; ++i)
-	{
-		memset(hash, 0, sizeof(hash));
-		hash[s[i]] = 1;
-		for (j = i + 1; j<n; ++j)
-		{
-			if (hash[s[j]] == 0)
-				hash[s[j]] = 1;
-			else
-				break;
-		}
-		if (j - i > maxLengh)
-		{
-			maxLengh = j - i;
-		}
-	}
-	return maxLengh;
-}
-```
-3.使用first，next数组求解
->引用自阿凡卢的博客http://www.cnblogs.com/luxiaoxun/archive/2012/10/02/2710471.html
-
-```c
-int maxLengh = 0;
-	//int begin = 0;
-	int n = strlen(s);
-	int * next = (int*)malloc(sizeof(int)*n); //next[i]记录了下一个与str[i]重复的字符的位置
-	int * first = (int*)malloc(sizeof(int)*(n + 1)); //first[i]记录str[i]后面最近的一个重复点
-	int hash[256];
-	memset(hash, 'n', sizeof(hash));		//memset一般只用于赋值成0或-1，这里使用是有问题的，但是并不影响结果
-
-	first[n] = n;
-	for (int i = n - 1; i >= 0; i--)
-	{
-		next[i] = hash[s[i]];
-		hash[s[i]] = i;
-		if (next[i] < first[i + 1])
-			first[i] = next[i];
-		else
-			first[i] = first[i + 1]; 	//生成first[]表，复杂度是O(N)的
-		//printf("%d\t%d\n", i, first[i]);
-		//printf("%d\t%d\n", i, next[i]);
-	}
-	for (int i = 0; i<n; i++)
-	{
-		if (first[i] - i > maxLengh)
-		{
-			maxLengh = first[i] - i;
-			//begin = i;
-		}
-	}
-	free(first);
-	free(next);
-	//printf("%.*s\n", maxLengh, &s[begin]);
-	return maxLengh;
 ```
