--- a/118. Pascal's Triangle.md
+++ b/118. Pascal's Triangle.md
@@ -4,10 +4,10 @@
 class Solution {
     public List<List<Integer>> generate(int numRows) {
         List<List<Integer>> rows = new ArrayList<>();
-        
+
         if (numRows == 0)
             return rows;
-        
+
         rows.add(new ArrayList<Integer>() {{
             add(1);
         }});
@@ -20,27 +20,20 @@ class Solution {
             add(1);
         }});
 
-        if (numRows == 2)
-            return rows;
-
         for (int i = 1; i < numRows - 1; i++) {
             List<Integer> lastRow = rows.get(rows.size() - 1);
             List<Integer> newRow = new ArrayList<>();
 
             newRow.add(1);
 
-            int j = 0;
-            while (true) {
-                if (lastRow.get(j + 1) != 1) {
-                    newRow.add(lastRow.get(j) + lastRow.get(j + 1));
-                } else {
-                    newRow.add(lastRow.get(j) + 1);
-                    newRow.add(1);
-                    break;
-                }
+            int j = 1;
+            while (lastRow.get(j) != 1) {
+                newRow.add(lastRow.get(j-1) + lastRow.get(j));
                 j++;
             }
 
+            newRow.add(lastRow.get(j-1) + 1);
+            newRow.add(1);
             rows.add(newRow);
         }
 
